---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 14/5/25
  Major Features:
    - Added [planet=fulgora].
    - Added tier 6 quality: hextreme.
  Balancing:
    - Worms and nests now increase in quality by distance on [planet=nauvis].
  Modding:
    - Hextreme quality can be disabled if you want another mod to replace it.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 13/5/25
  Bugfixes:
    - Faraway hexes had no trades sometimes.
    - Trade overview input and output filtering wasn't combining correctly.
    - "Show claimed only" trade overview filter was showing only unclaimed trades.
  Features:
    - Trade overview now has options to filter for exact inputs or exact outputs.
    - Trade overview now has sorting options for various metrics.
    - Trade overview now shows progress during processing of trades to be listed.
    - Trade overview trade content filters can now be swapped by clicking on the trade arrow between them.
  Optimizations:
    - Made trade overview loading less UPS-intensive.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 12/5/25
  Major Features:
    - Added [planet=vulcanus].
  Balancing:
    - Decreased the rate at which item values scale on Nauvis.
    - Reduced productivity bonuses to half, except for the quest reward.
  Bugfixes:
    - Fixed volume calculation for the extra trades added by bronze rank items.
  Optimizations:
    - Optimized trade overview.
  Minor Features:
    - Added commands /spawn-ship, /chart
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 7/5/25
  Features:
    - Added more quests and rewards.
    - Implemented the Biter Rammer quest.
  Changes:
    - Added rewards to some quests which enable claiming some hexes for free.