@@ -5,9 +5,14 @@ Date: 14/5/25
     - Added [planet=fulgora].
     - Added tier 6 quality: hextreme.
   Balancing:
-    - Worms and nests now increase in quality by distance on [planet=nauvis].
+    - Worms, nests, and hex cores now increase in quality by distance on [planet=nauvis].
   Modding:
     - Hextreme quality can be disabled if you want another mod to replace it.
+  Features:
+    - Trades now work on a per-quality basis.
+      Normal in, normal out. Rare in, rare out, etc.
+      Only one trade is needed for all qualities. Works up to the hex core's quality.
+      Coins do not have quality, so they multiply for each quality tier.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 13/5/25
